[gd_scene load_steps=9 format=3 uid="uid://s5k2duoxcrlq"]

[ext_resource type="Script" uid="uid://wi0ov1sgegct" path="res://scripts/weapon.gd" id="1_8fp1k"]
[ext_resource type="PackedScene" uid="uid://coaul7a2ns1wy" path="res://assets/revolver_navy_colt_1851_silver.glb" id="2_cjr6y"]
[ext_resource type="AudioStream" uid="uid://bw5etc0t4hj0s" path="res://assets/clean-revolver-reload-6889.mp3" id="3_xrduv"]
[ext_resource type="AudioStream" uid="uid://bfnwlb2ch452k" path="res://assets/single-pistol-gunshot-33-37187.mp3" id="4_5csnh"]

[sub_resource type="Animation" id="Animation_cjr6y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sketchfab_Scene:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.072484516, -1.5562367, 0.020820703)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sketchfab_Scene:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.15930796, -0.18284601, -0.39445567)]
}

[sub_resource type="Animation" id="Animation_xrduv"]
resource_name = "reload"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sketchfab_Scene:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.5, 1.9666667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.072484516, -1.5562367, 0.020820703), Vector3(-0.07275426, -1.583939, -3.1402996), Vector3(-0.013962634, -1.4974926, -4.712389), Vector3(-0.013962634, -1.4974926, -6.2831855)]
}

[sub_resource type="Animation" id="Animation_8fp1k"]
resource_name = "shoot"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sketchfab_Scene:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.23333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.072484516, -1.5562367, 0.020820703), Vector3(0.07195377, -1.5877894, -0.40972212), Vector3(0.072484516, -1.5562367, 0.020820703)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sketchfab_Scene:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.23333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.15930796, -0.18284601, -0.39445567), Vector3(0.15930796, -0.18284601, -0.39054942), Vector3(0.15930796, -0.18284601, -0.39445567)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xrduv"]
_data = {
&"RESET": SubResource("Animation_cjr6y"),
&"reload": SubResource("Animation_xrduv"),
&"shoot": SubResource("Animation_8fp1k")
}

[node name="Weapon" type="Node3D"]
script = ExtResource("1_8fp1k")

[node name="Sketchfab_Scene" parent="." instance=ExtResource("2_cjr6y")]
transform = Transform3D(0.036814805, -0.20511957, -2.8137152, 0.058585465, 2.813403, -0.20433035, 2.8205714, -0.055759285, 0.040969413, 0.15930796, -0.18284601, -0.39445567)

[node name="ReloadSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_xrduv")

[node name="ShootSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_5csnh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xrduv")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
